--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=rockets
 
+rocket.api.base-url=https://api.spacexdata.com/v3
+rocket.api.path=/rockets
+rocket.api.default-limit=3
+rocket.api.default-offset=0
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/RocketDatabase
 spring.datasource.username=postgres
 spring.datasource.password=postgres
